0025170: Fix the incorrect parsed float values with two points